# MineRTL

./: .gitignore  README.md  main.py  netlist.json  netlist.ys  pyproject.toml  simulate.py  synth.sh
examples/and_gate/: and_gate.v
examples/counter/: counter.v
examples/helloworld/: helloworld.v
examples/helloworld2/: helloworld2.v
examples/multibit/: multibit.v
examples/multionebit/: multionebit.v
examples/mux/: mux.v
examples/or_gate/: or_gate.v
examples/regs/: regs.v
examples/sevenseg/: pin_targets.json  sevenseg.v
examples/sevensegplus/: pin_targets.json  sevensegplus.v
examples/writeback/: writeback.v
minecraft_v/: __init__.py  __main__.py  build_utils.py  cell_library.py  main.py  models.py  placement_engine.py  placement_ir.py  visualize_layout.py
minecraft_v/placement_engine/: __init__.py  block_utils.py  builder.py  constants.py  ir.py  layout.py  pathfinding.py  template.py  wire.py
schematics/: and.litematic  dff.litematic  dffe.litematic  dlatch.litematic  fulladder.litematic  mux.litematic  not.litematic  or.litematic  xor.litematic
techmap/: fa_map.v  sdff_decompose.v  sdffe_decompose.v
tests/: test_module_to_component_list.py  test_placement_litematic.py
