[project]
name = "minecraft-v"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13.3",
    "litemapy>=0.11.0b0",
]

[tool.setuptools.packages.find]
include = ["minecraft_v*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
